# kostrack

./: .env.example  .gitignore  .pypirc  LICENSE  README.md  docker-compose.yml  init-db.sql  kostrack.yml  netlify.toml
api/: main.py  requirements.txt
docs/: index.html
docs/assets/: docs.css  nav.js
docs/docs/: anthropic.html  budgets.html  cli.html  configure.html  deepseek.html  docker.html  environment.html  fastapi.html  gemini.html  grafana.html  index.html  langgraph.html  openai.html  platform-api.html  pricing-sync.html  queries.html  quickstart.html  tags.html  tracing.html
grafana-provisioning/dashboards/: agentic.json  attribution.json  budgets.json  dashboards.yml  overview.json
sdk/: README.md  pyproject.toml
sdk/kostrack/: __init__.py  budget.py  cli.py  models.py  tracing.py
sdk/kostrack/calculators/: anthropic_calc.py  deepseek_calc.py  gemini_calc.py  openai_calc.py  pricing_engine.py
sdk/kostrack/providers/: anthropic_provider.py  deepseek_provider.py  gemini_provider.py  openai_provider.py
sdk/kostrack/sync/: pricing_sync.py
sdk/kostrack/writers/: batch_writer.py  sqlite_queue.py
sdk/tests/: integration_test.py  test_api_cli.py  test_deepseek.py  test_e2e.py  test_phase2.py
